@@ -150,18 +150,18 @@ static DWORD64 __stdcall GetModBase(HANDLE hProcess, DWORD64 dwAddr)
 	DWORD64 modulebase;
 	// Try to get the module base if already loaded, otherwise load the module
 	modulebase=SymGetModuleBase64(hProcess, dwAddr);
-    if(modulebase)
-        return modulebase;
-    else
-    {
-        MEMORY_BASIC_INFORMATION stMBI ;
-        if ( 0 != VirtualQueryEx ( hProcess, (LPCVOID)(size_t)dwAddr, &stMBI, sizeof(stMBI)))
-        {
-            DWORD dwPathLen=0, dwNameLen=0 ;
-            TCHAR szFile[ MAX_PATH ], szModuleName[ MAX_PATH ] ;
+	if(modulebase)
+		return modulebase;
+	else
+	{
+		MEMORY_BASIC_INFORMATION stMBI ;
+		if ( 0 != VirtualQueryEx ( hProcess, (LPCVOID)(size_t)dwAddr, &stMBI, sizeof(stMBI)))
+		{
+			DWORD n, dwPathLen=0, dwNameLen=0 ;
+			TCHAR szFile[ MAX_PATH ], szModuleName[ MAX_PATH ] ;
 			MODULEINFO mi={0};
-            dwPathLen = GetModuleFileName ( (HMODULE) stMBI.AllocationBase , szFile, MAX_PATH );
-            dwNameLen = GetModuleBaseName (hProcess, (HMODULE) stMBI.AllocationBase , szModuleName, MAX_PATH );
+			dwPathLen = GetModuleFileName ( (HMODULE) stMBI.AllocationBase , szFile, MAX_PATH );
+			dwNameLen = GetModuleBaseName (hProcess, (HMODULE) stMBI.AllocationBase , szModuleName, MAX_PATH );
 			for(n=dwNameLen; n>0; n--)
 			{
 				if(szModuleName[n]=='.')
@@ -182,9 +182,9 @@ static DWORD64 __stdcall GetModBase(HANDLE hProcess, DWORD64 dwAddr)
 			//fxmessage("%s, %p, %x, %x\n", szFile, mi.lpBaseOfDll, mi.SizeOfImage, (DWORD) mi.lpBaseOfDll+mi.SizeOfImage);
 			modulebase=SymGetModuleBase64(hProcess, dwAddr);
 			return modulebase;
-        }
-    }
-    return 0;
+		}
+	}
+	return 0;
 }
 
 static HANDLE myprocess;
@@ -441,10 +441,10 @@ FXException FXException::copy() const
 }
 #endif
 
-#ifndef HAVE_CPP0XRVALUEREFS
+#ifndef FXEXCEPTION_HAVE_CPP0XRVALUEREFS
 FXException &FXException::operator=(FXException &o)
 #else
-FXException &&FXException::operator=(FXException &&o)
+FXException &FXException::operator=(FXException &&o)
 #endif
 {
 	FXDELETE(p);
